--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="gallery">
 
     <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" title="Video 1" frameborder="0" allowfullscreen></iframe>
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/0BjlBnfHcHM" title="Beat Ronaldo, Win $1,000,000" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <h3>Video 1 Title</h3>
       <p>Short description</p>
     </div>
