--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
     <div class="video-card">
       <iframe width="853" height="480" src="https://www.youtube.com/embed/0BjlBnfHcHM" title="Beat Ronaldo, Win $1,000,000" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <h3>Video 1 Title</h3>
-      <p>Short description</p>
+      <h3>CR7</h3>
+      <p>EN GO SHOCK YOU</p>
     </div>
 
     <div class="video-card">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" title="Video 2" frameborder="0" allowfullscreen></iframe>
-      <h3>Video 2 Title</h3>
-      <p>Short description</p>
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/6ICSfXcmgPE" title="How A Winger Who Refused To Run Became The Best Player Ever" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <h3>MESSI</h3>
+      <p>SAS E DEY HOT</p>
     </div>
 
     <div class="video-card">
